[gd_scene load_steps=6 format=3 uid="uid://b0huwqlhivvnq"]

[ext_resource type="PackedScene" uid="uid://bgc0fgol2ghbm" path="res://game/abilities/quicksand/Bomb.gltf" id="1_0byx7"]
[ext_resource type="Script" path="res://game/abilities/quicksand/quicksand_grenade.gd" id="1_xd1u4"]
[ext_resource type="PackedScene" uid="uid://dv6v65mkv7cyu" path="res://game/abilities/quicksand/quicksand.tscn" id="2_psrp8"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_p8b7l"]
rough = true
bounce = 0.4

[sub_resource type="SphereShape3D" id="SphereShape3D_dsukn"]
radius = 0.614297

[node name="Grenade" type="RigidBody3D"]
collision_mask = 3
mass = 20.0
physics_material_override = SubResource("PhysicsMaterial_p8b7l")
continuous_cd = true
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_xd1u4")
quicksand = ExtResource("2_psrp8")

[node name="Bomb2" parent="." instance=ExtResource("1_0byx7")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource("SphereShape3D_dsukn")

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_explosion_timer_timeout"]
